@@ -46,6 +46,7 @@ endif::[]
 - Make Filters thread-safe {pull}624[#624]
 - Omit passwords in outgoing urls {pull}629[#629]
 - Add missing mutex to Counter metrics {pull}636[#636]
+- Correct span context collection name for Mongo getMore commands {pull}637[#637]
 
 [[release-notes-3.2.0]]
 ==== 3.2.0 (2019-11-19)
